<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">


    <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />

    <LinearLayout
            android:id="@+id/layoutEmailPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/fieldEmail"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

        <EditText
                android:id="@+id/fieldPassword"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/layoutButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutEmailPassword"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/buttonSignIn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"/>


        <Button
                style="?android:attr/buttonBarPositiveButtonStyle"
                android:id="@+id/buttonSignUp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"/>

    </LinearLayout>


</RelativeLayout>
