<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_logout"
        android:title="@string/menu_login"
        android:visible="true"
        app:showAsAction="never" />
</menu>
